--- a/landing.css
+++ b/landing.css
@@ -1,3 +1,32 @@
 .holder {
-  width: 400px;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+form#interest-form {
+  display: flex;
+  flex-direction: column;
+}
+
+input#interested-email {
+  font-size: 28px;
+  padding: 12px 18px;
+  border-radius: 5px;
+  border: 2px solid #d0daff;
+}
+
+input[type="submit"] {
+  margin-top: 20px;
+  -webkit-appearance: none;
+  border: 2px solid green;
+  border-radius: 4px;
+  background: green;
+  color: white;
+  font-size: 16px;
+  padding: 12px;
+  text-transform: uppercase;
+  word-spacing: 2.4px;
 }
