--- a/landing.css
+++ b/landing.css
@@ -1,3 +1,26 @@
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  background: black;
+  color: white;
+  font-family: sans-serif;
+}
+
+#demo-video {
+  max-height: 100%;
+  align-self: start;
+  box-shadow: inset -1px -9px 15px 13px black;
+  z-index: 1;
+  min-width: 1760px;
+}
+
 .holder {
   max-width: 600px;
   display: flex;
@@ -30,3 +53,42 @@ input[type="submit"] {
   text-transform: uppercase;
   word-spacing: 2.4px;
 }
+
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.subscribe {
+  z-index: 2;
+  background: black;
+  box-shadow: 0px -60px 60px 20px rgb(0, 0, 0);
+}
+
+.video-wrapper {
+  display: flex;
+  justify-content: center;
+  box-shadow: inset -1px -9px 15px 13px black;
+  height: 100%;
+  background-color: black;
+  z-index: 2;
+  position: relative;
+  overflow: hidden;
+}
+
+#interested-label {
+  font-size: 24px;
+}
+
+/* .shadow {
+  height: 60px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: inset 0px -20px 15px 13px black;
+  z-index: 3;
+} */
