--- a/landing.css
+++ b/landing.css
@@ -9,7 +9,7 @@ html {
 
 @media screen and (min-width: 700px) and (min-height: 1200px) {
   html {
-    font-size: 200%;
+    font-size: 160%;
   }
 }
 
@@ -63,10 +63,17 @@ input[type="submit"] {
   border: none;
   background: green;
   color: white;
-  font-size: 1.6rem;
-  padding: 16px 8px;
+  font-size: 2.4rem;
+  padding: 24px 8px;
   text-transform: uppercase;
   word-spacing: 2.4px;
+  white-space: normal;
+}
+
+@media screen and (min-width: 700px) and (min-height: 1200px) {
+  input[type="submit"] {
+    padding: 36px 8px;
+  }
 }
 
 .page-wrapper {
@@ -76,12 +83,21 @@ input[type="submit"] {
   width: 100%;
   justify-content: space-between;
   text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.subscribe {
-  z-index: 2;
+.shadow {
+  z-index: 3;
   background: black;
-  box-shadow: 0px -60px 60px 20px rgb(0, 0, 0);
+}
+
+.shadow.top {
+  box-shadow: 0px -20px 20px 20px rgb(0, 0, 0);
+}
+
+.shadow.bottom {
+  box-shadow: 0px 20px 20px 20px rgb(0, 0, 0);
 }
 
 .video-wrapper {
@@ -93,6 +109,7 @@ input[type="submit"] {
   z-index: 2;
   position: relative;
   overflow: hidden;
+  margin: 20px 0;
 }
 
 #interested-label {
