--- a/landing.css
+++ b/landing.css
@@ -25,7 +25,7 @@ body {
 html,
 body,
 .the-fold {
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 #demo-video {
@@ -37,7 +37,7 @@ body,
 
 @media screen and (max-width: 1200px) and (max-height: 1200px) and (orientation: landscape) {
   #demo-video {
-    width: 110vh; /*this would need to be removed for the bottom to work again.*/
+    width: 97vh; /*this would need to be removed for the bottom to work again.*/
   }
 }
 
@@ -153,7 +153,7 @@ body,
 
 .subtitle {
   margin: 4px 16px;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 }
 
 .hidden {
