--- a/landing.css
+++ b/landing.css
@@ -25,7 +25,7 @@ body {
 html,
 body,
 .the-fold {
-  min-height: 100%;
+  height: 100%;
 }
 
 #demo-video {
@@ -55,8 +55,8 @@ body,
 }
 
 #interested-email {
-  font-size: 3.6rem;
-  padding: 6px 8px;
+  font-size: 2.5rem;
+  padding: 10px 8px;
   border-radius: 5px;
   border: 2px solid #d0daff;
   text-align: center;
@@ -67,11 +67,16 @@ body,
   color: #c7c7c7;
 }
 
+#interested-submit.failed {
+  background: #7c0f0f;
+  color: #c7c7c7;
+}
+
 #interested-submit {
   margin-top: 20px;
   -webkit-appearance: none;
   border: none;
-  background: linear-gradient(#2d772d, #003800);
+  background: linear-gradient(#2d772d, #1b901b);
   color: white;
   font-size: 2.4rem;
   padding: 24px 8px;
@@ -80,12 +85,8 @@ body,
   white-space: normal;
 }
 
-#interested-submit:hover {
-  background-position: 100px;
-}
-
 #interested-submit:active {
-  background: radial-gradient(#003200, #006f00);
+  background: radial-gradient(#1e331e, #2d772d);
 }
 
 @media screen and (min-width: 700px) and (min-height: 1200px) {
@@ -121,8 +122,6 @@ body,
   display: flex;
   justify-content: center;
   z-index: 2;
-  position: relative;
-  overflow: hidden;
 }
 
 #interested-label {
@@ -142,6 +141,10 @@ body,
 
 .heading-wrapper {
   margin-bottom: 10px;
+}
+
+.subscribe {
+  margin-top: 10px;
 }
 
 .page-title {
