--- a/landing.css
+++ b/landing.css
@@ -31,14 +31,9 @@ body,
 #demo-video {
   margin: 0 auto;
   z-index: 1;
-  width: 100%; /*this would need to be removed for the bottom to work again.*/
+  width: 97vh;
+  max-width: 100%;
   /* min-width: 1760px; This let the video shrink but keep the middle portion of the video visible */
-}
-
-@media screen and (max-width: 1200px) and (max-height: 1200px) and (orientation: landscape) {
-  #demo-video {
-    width: 97vh; /*this would need to be removed for the bottom to work again.*/
-  }
 }
 
 .holder {
@@ -97,12 +92,17 @@ body,
 
 .the-fold {
   display: flex;
-  flex-direction: column;
-  width: 100%;
+  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+  width: 100%;
   text-align: center;
   max-width: 720px;
   margin: 0 auto;
+}
+
+.the-fold > * {
+  flex: 1;
 }
 
 .shadow {
