Make sure subscribe takes up a row

--- a/landing.css
+++ b/landing.css
@@ -139,6 +139,7 @@ body,
 
 .subscribe {
   margin-top: 10px;
+  flex-basis: 100%; /*Make sure it takes up a whole row always. */
 }
 
 .page-title {
