--- a/landing.css
+++ b/landing.css
@@ -56,17 +56,48 @@ small {
 .videos {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  align-items: flex-start;
 }
 
-#demo-video, .kickstarter-video {
+#demo-video {
   flex: 1 1 0;
   width: 50%;
   min-width: 200px;
   margin: 0 auto;
   z-index: 1;
 }
+
+.video-wrap {
+  position: relative;
+  padding-bottom: 28.12%;
+  width: 50%;
+  height: 0;
+  overflow: hidden;
+}
+
+.kickstarter-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-width: 420px) {
+  .videos {
+    flex-direction: column;
+  }
+
+  #demo-video {
+    width: 100%;
+  }
+  
+  .video-wrap {
+    padding-bottom: 56.25%;
+    width: 100%;
+  }
+}
+
 
 .holder {
   max-width: 600px;
