--- a/landing.css
+++ b/landing.css
@@ -251,3 +251,27 @@ main {
 .word-box {
   display: inline-block;
 }
+
+.socials {
+  width: 100%;
+  margin-top: 30px; 
+}
+
+.socials .icons {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  margin-top: 30px; 
+}
+
+.socials .icons > a {
+  width: 100%;
+  min-width: 0;
+  object-fit: contain;
+  padding: 0 3%;
+}
+
+.socials .icons img {
+  width: 100%;
+}
