--- a/landing.css
+++ b/landing.css
@@ -119,7 +119,7 @@ small {
 .interested-submit {
   border-radius: 2px;
   margin-top: 12px;
-  -webkit-appearance: none;
+  appearance: none;
   border: 2px solid #669966;
   background: linear-gradient(#2d772d, #1b901b);
   color: white;
